refactor(solution): extract SolutionOwnerPort for solutions write boundary (P3-OWNER-001-E)
Created com.ulticode.modules.solution.port.SolutionOwnerPort and DefaultSolutionOwnerPort.
Encapsulates all solutions write operations (flag, unflag, delete, setPublished).
Injects ProblemExistencePort for the problem.has_solution side-effect without importing
ProblemMapper directly. Refactored AdminSolutionServiceImpl to route all writes through
SolutionOwnerPort. Added DefaultSolutionOwnerPortTest; updated AdminSolutionServiceImplTest.